--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -42,10 +42,23 @@ a {
 }
 
 .slogan {
-  font-size: 20px;
+  font-size: 21px;
   color: #fff;
 }
 
 .glow {
-  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #4473b6, 0 0 20px #4473b6,
+    0 0 25px #4473b6, 0 0 30px #4473b6, 0 0 35px #4473b6;
+    animation: glow 1s ease-in-out infinite alternate;
 }
+
+@keyframes glow {
+    from {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #4473b6, 0 0 20px #4473b6, 0 0 25px #4473b6, 0 0 30px #4473b6, 0 0 35px #4473b6;
+    }
+    to {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #4473b6, 0 0 40px #4473b6, 0 0 50px #4473b6, 0 0 60px #4473b6, 0 0 70px #4473b6;
+    }
+  }
+  
+  
