--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fbfbfb;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 a {
   color: inherit;
@@ -24,16 +24,20 @@ a {
 .makeStyles-appBar-1 {
   background-color: #fff1 !important;
 }
-.brandContainer {
+.headerContainer {
   font-family: Homenaje, sans-serif;
 
+  border: 1px solid red;
   z-index: 1000;
   color: #fbfbfb;
-  position: fixed;
-  bottom: 22px;
-  left: 20px;
   letter-spacing: 0.11em;
+  margin-top: 70vh;
 }
+
+.brandContainer {
+ 
+}
+
 .brand {
   font-size: 62.48px;
   margin: 0 0 0.075em -0.05em;
@@ -49,7 +53,7 @@ a {
 .glow {
   text-shadow: 0 0 5px #fffa, 0 0 10px #fff, 0 0 15px #4473b6, 0 0 20px #4473b6,
     0 0 25px #4473b6, 0 0 30px #4473b6, 0 0 35px #4473b6;
-    /* animation: glow 1s ease-in-out infinite alternate; */
+  /* animation: glow 1s ease-in-out infinite alternate; */
 }
 /* 
 @keyframes glow {
@@ -62,3 +66,12 @@ a {
   }
   
    */
+canvas {
+  position: fixed;
+  top: 0px;
+  z-index: -1 !important;
+}
+
+h1 {
+  color: #8f0;
+}
