--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -1,6 +1,6 @@
 /*App css*/
 .holder {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: linear-gradient(-45deg, #fff, #aaa, #777, #555, #333, #111);
   background-size: 500vw 500vh;
