--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -2,24 +2,24 @@
 .holder {
   min-height: 100vh;
   width: 100%;
-  background: linear-gradient(-45deg, #fff, #aaa, #777, #555, #333, #111);
+  background: linear-gradient(45deg, #fff, #aaa, #777, #555, #333, #111);
   background-size: 500vw 500vh;
   transition-duration: 1s;
 }
-.style0 {
-  background-position: 0% 0%;
+.home {
+  background-position: 100% 25%;
 }
-.style1 {
-  background-position: 25% 25%;
+.events {
+  background-position: 75% 50%;
 }
-.style2 {
-  background-position: 50% 50%;
+.contact {
+  background-position: 50% 75%;
 }
-.style3 {
-  background-position: 75% 75%;
+.about {
+  background-position: 25% 100%;
 }
 .style4 {
-  background-position: 100% 100%;
+  background-position: 0% 100%;
 }
 .shine0 {
   animation: shine0 2s linear forwards;
