--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -37,10 +37,23 @@
   width: 20%;
   border-top: 2px solid #fff;
 }
+.eventsM hr{
+  width: 10%;
+
+}
 .content h1 {
   color: #fff;
   text-transform: uppercase;
-  padding: 1rem 1.5rem 0rem 1.5rem;
+  padding: 1rem 0rem 0rem 1.5rem;
+}
+.content h2 {
+  color: #fff;
+
+  text-transform: uppercase;
+  /* font-size: 2rem; */
+  padding: 1rem 3rem 0rem 1.5rem;
+  border-right: 3px solid royalblue;
+
 }
 
 .content h4,
