--- a/src/Components/Content/Events/index.css
+++ b/src/Components/Content/Events/index.css
@@ -1,3 +1,8 @@
+.eventInfo {
+  border:1px solid white;
+  border-radius:2rem;
+  margin: auto 5px;
+}
 .slider {
   width: 100%;
   text-align: center;
